tools/k8s/dev/api/api-test-helper.k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-test-helper
  labels:
    component: api-test-helper
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: api-test-helper
      tier: backend
  template:
    metadata:
      labels:
        component: api-test-helper
        tier: backend
    spec:
      containers:
        - name: api-test-helper
          image: api-test-helper.dev
          imagePullPolicy: Never
          ports:
            - containerPort: 4052
