tools/k8s/dev/api/api.k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: learn-api
  labels:
    component: learn-api
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      component: learn-api
      tier: backend
  template:
    metadata:
      labels:
        component: learn-api
        tier: backend
    spec:
      containers:
        - name: learn-api
          image: learn-api.dev
          imagePullPolicy: Never
          ports:
            - containerPort: 4051
