tools/k8s/dev/api/api-test-helper.k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-test-helper
  labels:
    component: api-test-helper
    tier: api-test-helper
spec:
  selector:
    component: api-test-helper
    tier: backend
  ports:
    - port: 4052
      targetPort: 4052
