tools/k8s/dev/api/api.k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learn-api
  labels:
    component: learn-api
    tier: backend
spec:
  selector:
    component: learn-api
    tier: backend
  ports:
    - port: 4051
      targetPort: 4051
